BugFix return object not array from get_out_info. extra padding between staking % and description

--- a/src/app/staked-coins/staked-coins.component.scss
+++ b/src/app/staked-coins/staked-coins.component.scss
@@ -73,6 +73,7 @@
             background-color: rgba(#0c69fe, 1);
         }
         .supply_detail {
+            padding-left: 8px;
             @include max991 {
                 padding-top: 4px;
             }
